# histoplus

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
histoplus/: __init__.py
histoplus/cli/: __init__.py  app.py  extract.py  utils.py
histoplus/extract/: __init__.py  core.py  utils.py
histoplus/extract/segmentation/: __init__.py  assemble.py  core.py  dataloader.py  postprocess.py
histoplus/extract/segmentation/predict/: __init__.py  concurrent_inference.py  core.py
histoplus/helpers/: __init__.py  constants.py  exceptions.py  mixed_precision.py  types.py
histoplus/helpers/border_effects/: __init__.py  core.py  overlap.py  project.py  utils.py
histoplus/helpers/data/: __init__.py  segmentation_polygon.py  slide_segmentation_data.py  tile_segmentation_data.py
histoplus/helpers/hub/: __init__.py  utils.py
histoplus/helpers/nn/: __init__.py  ops.py  utils.py  vit.py
histoplus/helpers/nn/cellvit/: __init__.py  model.py
histoplus/helpers/nn/extractor/: __init__.py  base.py  timm.py
histoplus/helpers/nn/maskdino/: __init__.py  model.py
histoplus/helpers/postprocessor/: __init__.py  base.py  cellvit.py
histoplus/helpers/segmentor/: __init__.py  base.py  cellvit.py  maskdino.py
histoplus/helpers/serializers/: __init__.py  json.py
histoplus/helpers/tiling/: __init__.py  new_tiling.py  optimal_mpp.py  tiles_map.py
histoplus/helpers/tissue_detection/: __init__.py  core.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_cli.py  test_endpoint.py  test_utils.py
tests/extract/: __init__.py  test_extract.py
tests/helpers/: __init__.py  test_models.py  test_segmentor.py  test_slide_segmentation_data.py  test_tiling.py  test_vit.py
tests/helpers/border_effects/: __init__.py  test_overlap.py  test_project.py
